...
  buttonText,
  authenticate = () => {},
  checkFields = () => true,
  goBack = true,
}) => {
  const navigation = useNavigation()
  const textB = buttonText ? buttonText : "Next"
  const { user, firstName, lastName, location, date, description, selectedInterests, setFromGoogle } = useContext(RegistrationContext)
  const justifyCondition = goBack? "space-between" : "flex-end"

  return (
    <View style={[styles.nextBar, { justifyContent: justifyCondition }]}>
      {goBack &&
...
