...
        />
        <Text style={[styles.title, globalStyles.boldText]}>
        {`Select ${eventMode ? "three" : "your"} interests`}
        </Text>

        <TextInput
          placeholder="Search"
          style={[styles.input, globalStyles.text]}
          onChangeText={handleSearch}
        />

        {selectedInterests.length !== 0 && (
          <ScrollView
...
